# coopserver

./: go.mod
coopserver/: .gitignore
libcoopserver/: .gitignore  Cargo.toml  meson.build
libcoopserver/include/: crash_handler.h  libdetour.h  offsets.h  util.h
libcoopserver/include/coop/game/: game_init.h
libcoopserver/include/coop/pc/: configfile.h  djui.h  fs.h  pc_main.h  platform.h  rom_checker.h
libcoopserver/include/coop/pc/gfx/: gfx_pc.h  gfx_rendering_api.h  gfx_window_manager.h
libcoopserver/include/coop/pc/network/: coopnet.h  network.h
libcoopserver/include/hooks/: configfile.h  coopnet.h  mods.h  pc_main.h
libcoopserver/include/server/: server_main.h
libcoopserver/src/: crash_handler.c  lib.rs  libdetour.c  main.c
libcoopserver/src/coop/pc/: configfile.c
libcoopserver/src/hooks/: configfile.c  coopnet.c  mods.c  pc_main.c
libcoopserver/src/server/: server_main.c
